# CRM-Customer-Support-Digital-FTE-

./: .gitignore  .mcp.json  PROJECT_COMPLETION_ANALYSIS.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  HUGGINGFACE_DEPLOYMENT.md  KAFKA_SETUP.md  QUICKSTART_KAFKA.md  README.md  check_schema.py  check_whatsapp_status.py  demo_tools.py  docker-compose-kafka.yml  project_summary.py  pyproject.toml  refresh_gmail_token.bat  requirements.txt  run_all_tests.py  run_complete_oauth_migration.py  run_migration.py  run_migration_002.py  setup_uv.ps1  setup_uv.sh  start_email_polling.bat  start_kafka.bat  start_kafka.sh  test_whatsapp_direct.py  verify_twilio_sandbox.py
backend/docker/: .dockerignore  Dockerfile.api  Dockerfile.worker  docker-compose.yml
backend/docs/: DEPLOYMENT_CHECKLIST.md  FINAL_SUMMARY.md  MODULE1_COMPLETE.md  MODULE2_COMPLETE.md  MODULE3_COMPLETE.md  MODULE4_COMPLETE.md  MODULE5_COMPLETE.md  MODULE6_COMPLETE.md  MODULE7_COMPLETE.md  PHASE1_COMPLETE.md  PROJECT_COMPLETE.md  RUNNING_GUIDE.md  UV_SETUP_COMPLETE.md
backend/k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  ingress.yaml  kafka-service.yaml  kafka-statefulset.yaml  namespace.yaml  postgres-deployment.yaml  secret.yaml  worker-deployment.yaml  zookeeper-service.yaml  zookeeper-statefulset.yaml
backend/migrations/: 001_better_auth_schema.sql  002_add_access_token_expires_at.sql  002_fix_better_auth_account_table.sql  003_admin_portal_schema.sql
backend/scripts/: README.md  __init__.py  apply_migration_002.py  build_and_push.sh  check_auth_schema.py  deploy.sh  generate_embeddings.py  generate_gmail_token.py  poll_emails.py  populate_knowledge_base.py  schema.sql  setup_database.sh  setup_pgvector.py  test_gmail_api.py  test_kafka.py  wake_database.py  wake_database_retry.py
backend/src/: __init__.py  config.py
backend/src/agent/: __init__.py  classifier.py  config.py  dual_mode_router.py  groq_agent.py  mcp_server.py  response_generator.py  runner.py  smart_agent.py  tools.py
backend/src/api/: __init__.py  admin.py  auth.py  channels.py  dependencies.py  deps.py  main.py  tickets.py
backend/src/channels/: __init__.py  email_handler.py  helpers.py  webform_handler.py  whatsapp_handler.py
backend/src/database/: __init__.py  client.py  schema.sql
backend/src/embeddings/: __init__.py  service.py  vector_search.py
backend/tests/: test_module1.py  test_module2.py  test_module3.py  test_module4.py  test_module5.py  test_module6.py  test_module7.py
(+84 files in other folders)
