[project]
name = "tasknest"
version = "1.0.0"
description = "TaskNest CRM Digital FTE - AI-powered Customer Success automation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Hackathon 5 Team"}
]
keywords = ["crm", "ai", "customer-success", "openai", "kafka", "kubernetes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",

    # Database
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",

    # Configuration & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # OpenAI (removed openai-agents-sdk - not in PyPI)
    "openai>=1.3.0",

    # Kafka
    "aiokafka>=0.10.0",

    # Gmail Integration
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.110.0",

    # Twilio (WhatsApp)
    "twilio>=8.11.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "numpy>=1.26.3",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/your-org/tasknest"
Documentation = "https://github.com/your-org/tasknest/blob/main/README.md"
Repository = "https://github.com/your-org/tasknest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# UV-specific configuration

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
